chore: apply pending OpenRewrite modernizations (REW-1)
Output of the pre-commit profile's OpenRewrite run, previously leaving the
working tree dirty on every -Ppre-commit invocation:
- Collections.emptyList/Map/Set -> List/Map/Set.of
- if-else-if chain -> switch (Joiner)
- JUnit test cleanups (SimplifyTestThrows)
- jakarta.annotation-api scope back to 'provided' (enforced by the profile's
  tooling, superseding the manual 'test' scope from the docs/build PR)

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01NKzn4Upj33uRFvWQep3UzE